fixed h1 span spacing

--- a/css/general.css
+++ b/css/general.css
@@ -8,6 +8,14 @@
   scroll-behavior: smooth;
 }
 
+p,
+a,
+li {
+  color: var(--text);
+  line-height: 1.6;
+}
+
+
 h1,
 h2,
 h3,
@@ -18,14 +26,6 @@ h6 {
   letter-spacing: 1.5px;
   line-height: 1.3;
   color: var(--text);
-}
-
-p,
-span,
-a,
-li {
-  color: var(--text);
-  line-height: 1.6;
 }
 
 button.primary {
